--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>pt1-e04-la-mere</title>
+    <title>La mère</title>
   </head>
   <body>
     <div id="app"></div>
