--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>La mère</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   </head>
   <body>
     <div id="app"></div>
