--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>La mère</title>
+    <title>Magna Mater</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   </head>
   <body>
