--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Magna Mater</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
